# ez-renamer

./: .rustfmt.toml  Cargo.toml  README.md
src/: args.rs  args_parser.rs  init.rs  main.rs  name_processing.rs  trim.rs
