[package]
name = "ezr"
description = "Eziest renamer for pirated content!"
version = "0.1.0"
authors = ["krawieck <fil.krawczyk@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
regex = "1"
lazy_static = "1.3.0"
log = "0.4.6"
pretty_env_logger = "0.3.0"
exitcode = "1.1.2"
structopt = "0.2.14"
