[package]
name = "ezr"
version = "0.1.5"
authors = ["krawieck <fil.krawczyk@gmail.com>"]
license-file = "LICENSE"
description = "Rust CLI tool for batch renaming files. It's purposefuly not very featureful because it's meant to be used for just some quick renaming."
readme = "README.md"
repository = "https://github.com/krawieck/ez-renamer"
keywords = ["cli", "windows", "linux"]
categories = ["command-line-utilities"]

[dependencies]
regex = "1"
log = "0.4.6"
pretty_env_logger = "0.3.0"
exitcode = "1.1.2"
structopt = "0.2.14"

[dev-dependencies.cargo-husky]
version = "1"
features = ["precommit-hook", "run-cargo-test", "run-cargo-check","run-cargo-clippy", "run-cargo-fmt"]
